Refactored attribute tests.